unpackaged/objects/Car__c.object
<CustomObject>
  <description>Used for validation of OrgFlow. Owned by Daniel Rosenberg. Do not touch.</description>
  <fields>
    <fullName>Color__c</fullName>
    <description>Main color of the car's exterior paint.</description>
    <inlineHelpText>If the exact color is not listed, select the closest match.</inlineHelpText>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>White</fullName>
        </value>
        <value>
          <fullName>Black</fullName>
        </value>
        <value>
          <fullName>Gray</fullName>
        </value>
        <value>
          <fullName>Red</fullName>
        </value>
        <value>
          <fullName>Blue</fullName>
        </value>
        <value>
          <fullName>Yellow</fullName>
        </value>
        <value>
          <fullName>Green</fullName>
        </value>
        <value>
          <fullName>Pink</fullName>
        </value>
        <value>
          <fullName>Gold</fullName>
          <isActive>false</isActive>
          <label>Gold</label>
        </value>
        <value>
          <fullName>Orange</fullName>
          <isActive>false</isActive>
          <label>Orange</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Electric__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this an electric car?</description>
    <label>Electric</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ModelYear__c</fullName>
    <label>Model Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>NumberSeats__c</fullName>
    <description>Front and rear seats</description>
    <label>Number of seats</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Power__c</fullName>
    <description>Max power of the car, measured in wheel horsepower (hp).</description>
    <inlineHelpText>Enter the number of horsepower!</inlineHelpText>
    <label>Power (hp)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Used</label>
    <type>Checkbox</type>
  </fields>
  <label>Car</label>
  <nameField>
    <label>Car Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Cars</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>